# geiger-entropy-oracle

./: .gitignore  LICENSE  README.md  wallet.json
.github/workflows/: ci.yml
docs/: deployments.md  entropy-metadata.json  operations.md  rads-metadata.json  setup-guide.md  whitepaper.md
entropy-contract/: Anchor.toml  check_state.js  clear_commitment.js  force_reveal.js  initialize.js  list_nodes.js  register_node.js  reset_commitment.js  test_randomness.js
entropy-contract/programs/geiger-entropy/: Cargo.toml
entropy-contract/programs/geiger-entropy/src/: lib.rs
entropy-daemon/: .geiger_device_fingerprint  config-mainnet.toml  config-testnet.toml  config.toml  daemon.py  geiger_entropy.csv  geiger_stream.py  install.sh  requirements.txt  reveal_entropy.js  start.sh  submit_entropy.js  submit_entropy_mainnet.js  test_geiger.py
entropy-daemon/idl-testnet/: geiger_entropy.json
entropy-daemon/idl/mainnet/: geiger_entropy.json
entropy-daemon/idl/mainnet-commit-reveal/: geiger_entropy.json
entropy-daemon/idl/testnet/: geiger_entropy.json
entropy-daemon/mainnet/: close_pending_finalize.js  commit_entropy.js  finalize_entropy.js  recover_commitment.js  reveal_entropy.js  reveal_entropy_v6.js
entropy-daemon/testnet/: commit_entropy.js  finalize_entropy.js  fulfill_randomness.js  recover_commitment.js  reveal_entropy.js  reveal_entropy_v6.js
entropy-daemon/tests/: sample.csv  test_entropy.py
