[package]
name = "geiger-entropy"
version = "0.1.0"
description = "Physical entropy VRF oracle for X1 — powered by radioactive decay"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "geiger_entropy"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
