[package]
name = "geiger-entropy"
version = "0.1.0"
description = "Physical entropy VRF oracle for X1 — powered by radioactive decay"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "geiger_entropy"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
sha2 = { version = "0.10", default-features = false }
blake3 = { version = "1.5", default-features = false }
